Fixes Navbar alignment

--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -8,6 +8,10 @@ nav {
   justify-content: space-around;
   padding: 10px 0;
 
+  > a {
+    width: fit-content;
+  }
+
   img {
     height: 100%;
   }
